--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
       </head>
       <body>
         <p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <strong>JavaScript</script>.</p>
+        <pre>Local repositories are typically limited to file system access. 
+             They are usually only visible from the master node. 
+             Local repositories are also known to require more complicated path 
+             names on Windows computers than most users want to manage. 
+             Users are advised to run jobs on agents rather than running them 
+             directly on the master. 
+             For those reasons, use a remote repository rather than a 
+             local repository for the best Blue Ocean experience
+        </pre>
       </body>
     </html>
 
